--- a/statistika.html
+++ b/statistika.html
@@ -26,11 +26,11 @@
                 <th>O'rin</th>
                 <th>Ism-familya</th>
                 <th>Telefon raqam</th>
-                <th>NotCoin</th>
+                <th>Notcoin</th>
             </tr>
         </thead>
         <tbody>
-
+<tr><td>1</td><td>Odilbek</td><td>+998912675782</td><td>2<td>
         </tbody>
     </table>
 </body>
